--- a/4-ml.tex
+++ b/4-ml.tex
@@ -326,7 +326,7 @@ The geometric analysis of crystalline porous materials is typically based on the
 
 The SA exposed to different probe sizes (\SI{1.2}{\angstrom}, \SI{1.8}{\angstrom} and \SI{2.0}{\angstrom}) was tested. The probe occupiable volume was chosen to measure the void fraction (VF) for different adsorbent using probe sizes of \SI{1.8}{\angstrom} (close to the radius of krypton) and \SI{2.0}{\angstrom} (close to that of xenon). This definition of pore volume demonstrated better agreement with experimental nitrogen isotherms.\autocite{vol_Ongari2017}
 
-Given the objective of predicting the difference between low-pressure selectivity and ambient-pressure selectivity (for a specific gas mixture composition), some descriptors hold little importance, and the key factor lies in the difference in accessible volume and affinity of the remaining pore volume with xenon compared to krypton. The intuition developed in Chapter 2 outlines the role of a diverse distribution of pores with different xenon affinities. Therefore, from the ``standard'' descriptors mentioned in the literature, the following 7 descriptors were retained: C\%, N\%, O\%, LCD ("D\_i\_vdw\_uff298"), PLD ("D\_f\_vdw\_uff298"), SA for a \SI{1.2}{\angstrom} probe ("ASA\_m2/cm3\_1.2") and VF for a \SI{2.0}{\angstrom} probe ("PO\_VF\_2.0"). Additionally, a new descriptor $\Delta \text{VF}$ was created to represent the difference in void fraction values, specifically the difference in volumes occupiable by xenon (\SI{2.0}{\angstrom}) and krypton (\SI{1.8}{\angstrom}). A comprehensive presentation of all these descriptors, including other geometrical descriptors based on pore size distribution, can be found in Table~S1 of the Supplementary Information (SI).
+Given the objective of predicting the difference between low-pressure selectivity and ambient-pressure selectivity (for a specific gas mixture composition), some descriptors hold little importance, and the key factor lies in the difference in accessible volume and affinity of the remaining pore volume with xenon compared to krypton. The intuition developed in Chapter 2 outlines the role of a diverse distribution of pores with different xenon affinities. Therefore, from the ``standard'' descriptors mentioned in the literature, the following 7 descriptors were retained: C\%, N\%, O\%, LCD ("D\_i\_vdw\_uff298"), PLD ("D\_f\_vdw\_uff298"), SA for a \SI{1.2}{\angstrom} probe ("ASA\_m2/cm3\_1.2") and VF for a \SI{2.0}{\angstrom} probe ("PO\_VF\_2.0"). Additionally, a new descriptor $\Delta \text{VF}$ was created to represent the difference in void fraction values, specifically the difference in volumes occupiable by xenon (\SI{2.0}{\angstrom}) and krypton (\SI{1.8}{\angstrom}). A comprehensive presentation of all these descriptors, including other geometrical descriptors based on pore size distribution, can be found in Table~\ref{tab:geom_descriptors} of the Supplementary Information (SI).
 
 \subsubsection{Pore size statistics}
 
