--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -1,3 +1,4 @@
+%!TeX root = main.tex
 %!TeX root = 3-fastsim.tex
 \documentclass[main]{subfiles}
 
@@ -432,7 +433,7 @@ Finally, although the algorithm in its present form can already be applied in a 
 
 \section{Grid Adsorption Energies Descriptors (GrAED)}\label{sct:grid}
 
-To conclude this overview of novel energy sampling methods, a revised version of the standard grid sampling will be presented. Grid sampling is the most accurate approach as it directly relies on the averaging definitions in equations~\ref{eq:eq:ads_enthalpy_3} and~\ref{eq:henry}. In this section, the inherent symmetry operations of most material structures and the removal of framework occupied space will be leveraged to accelerate this typically slow method. This exhaustive approach allows for the calculation of energy distributions that are less biased compared to other methods. These energy distributions serve as fundamental building blocks for the prediction of ambient-pressure selectivity, which will be discussed in the next section.
+To conclude this overview of novel energy sampling methods, a revised version of the standard grid sampling will be presented. Grid sampling is the most accurate approach as it directly relies on the averaging definitions in equations~\ref{eq:ads_enthalpy_3} and~\ref{eq:henry}. In this section, the inherent symmetry operations of most material structures and the removal of framework occupied space will be leveraged to accelerate this typically slow method. This exhaustive approach allows for the calculation of energy distributions that are less biased compared to other methods. These energy distributions serve as fundamental building blocks for the prediction of ambient-pressure selectivity, which will be discussed in the next section.
 
 \subsection{Implementation of an efficient grid algorithm}
 
